Fix: Fixed issues loaders,alignments,manage profile

--- a/src/styles/add-edit-qrcode/add-edit-qrcode.scss
+++ b/src/styles/add-edit-qrcode/add-edit-qrcode.scss
@@ -108,6 +108,7 @@
   svg {
     fill: $primary-color;
     width: 21px;
+    cursor: pointer;
   }
 }
 .button-row {
