--- a/src/styles/forgot-password/forgot-password.scss
+++ b/src/styles/forgot-password/forgot-password.scss
@@ -1,9 +1,6 @@
 @import '../variables/variable.scss';
 .forgot-password-main-container {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
- justify-content: center;
+  height: 100vh;
    background-color: #f4f4f4;
  }
  
@@ -13,7 +10,7 @@
   justify-content: center;
   flex-direction: column;
   height: 100vh;
-  max-width: 350px;
+  max-width: 340px;
    background:$background-color;
    padding: 2rem;
   //  border-radius: 8px;
